2015-06-21  kitone  <kitone@gna.org>

	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	Fix bug #23656 : String "wavefrom" (inted of "waveform") in some locations

2015-06-07  kitone  <kitone@gna.org>

	* plugins/subtitleformats/subtitleeditorproject/subtitleeditorproject.cc:
	Fix bug #23588 : Name Subtitle Editor project files something else but name.xml.

2015-06-07  kitone  <kitone@gna.org>

	* configure.ac:
	* plugins/actions/Makefile.am:
	* plugins/actions/stylize/Makefile.am:
	* plugins/actions/stylize/stylize.cc:
	* plugins/actions/stylize/stylize.se-plugin.in:
	Fix bug #23529 : Impossible to change styles of several subtitles at once.

2015-06-07  kitone  <kitone@gna.org>

	* src/document.h:
	* src/style.cc:
	* src/styles.cc:
	Emit signals on style edition.

2015-06-06  kitone  <kitone@gna.org>

	* plugins/actions/configurekeyboardshortcuts/dialog-configure-keyboard-shortcuts.ui:
	Remove deprecated widget.

2015-06-06  kitone  <kitone@gna.org>

	* plugins/actions/documentmanagement/documentmanagement.cc:
	* plugins/actions/preferences/dialog-preferences.ui:
	Fix bug #23622 : Make autosave setting in preferences work and other improvements. (Patch by Tomáš Hnyk)

2015-05-06  kitone  <kitone@gna.org>

	* src/gui/textviewcell.cc:
	* src/gui/textviewcell.h:
	* src/subtitleview.cc:
	Fix bug #23569 : Cursor cannot be moved with mouse when editing subtitles.

2015-04-30  kitone  <kitone@gna.org>

	* plugins/actions/keyframesmanagement/keyframesmanagement.cc:
	* plugins/actions/videoplayermanagement/videoplayermanagement.cc:
	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	Fix bug #23521 : Videos, waveform and keyframe files drag'n'dropped do not show up in recently opened

2015-04-30  kitone  <kitone@gna.org>

	* plugins/actions/dialoguize/dialog-dialoguize-preferences.ui:
	* plugins/actions/dialoguize/dialoguize.cc:
	* plugins/actions/styleeditor/dialog-style-editor.ui:
	* plugins/actions/styleeditor/styleeditor.cc: