@@ -1,6 +1,11 @@
 2015-06-21  kitone  <kitone@gna.org>
 
 	* POTFILES.in:
+	Fix bug #23656 : String "wavefrom" (inted of "waveform") in some locations.
+
+2015-06-21  kitone  <kitone@gna.org>
+
+	* POTFILES.in:
 	Fix bug #23655 : Non existent files listed on po/POTFILES.in.
 
 2015-04-11  kitone  <kitone@gna.org>
